# basic_api_with_fast_api

./: .gitignore  .pylintrc  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
app/api/: entrypoint.py
app/api/controllers/: index.py
app/config/: __init__.py  container.py  main.py  schemes.py  settings.py
app/database/: __init__.py  async_database.py  base.py
app/database/migrations/: env.py
app/database/migrations/versions/: 08bb38c0dc08_create_access_system_base_tables.py  1872edea254c_outbox_table.py  772a0ecf9ec5_create_first_tables_security_migration.py
app/database/models/: __init__.py  shared.py  system_access.py
app/modules/system_access/: __init__.py  container.py
app/modules/system_access/domain/: abstract_uow.py  events.py  value_objects.py
app/modules/system_access/domain/employee/: __init__.py  employee.py  repository.py
app/modules/system_access/domain/parent_company/: __init__.py  parent_company.py  repository.py
app/modules/system_access/domain/subsidiary_company/: __init__.py  repository.py  subsidiary_company.py
app/modules/system_access/infra/: sqlalchemy_uow.py
app/modules/system_access/infra/repositories/: __init__.py  sqlalchemy_employee.py  sqlalchemy_parent_company.py  sqlalchemy_subsidiary_company.py
app/shared/domain/: __init__.py  aggregates.py  domain_events.py  entities.py  logger.py  outbox_message.py  outbox_repository.py  value_objects.py
app/shared/infra/repositories/: sqlalchemy_outbox.py
docker/: backend.dockerfile
scripts/: web-start-reload.sh
