[tool.poetry]
name = "integração com a ferramenta de gerenciamento de login ory"
version = "0.1.0"
description = ""
authors = ["Orion-Hunter <silvasalesf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
sqlalchemy = {extras = ["mypy"], version = "^1.4.46"}
mypy = "^0.991"
alembic = "^1.9.2"
fastapi = "^0.89.1"
pydantic = "^1.10.4"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
asyncpg = "^0.27.0"
uuid = "^1.30"
dependency-injector = "^4.41.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.10"
flake8 = "^6.0.0"
import-linter = "^1.6.0"
vulture = "^2.7"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
