[tool.poetry]
name = "integração com a ferramenta de gerenciamento de login ory"
version = "0.1.0"
description = ""
authors = ["Orion-Hunter <silvasalesf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
sqlalchemy = {extras = ["mypy"], version = "1.4.0"}
mypy = "^0.991"
alembic = "^1.9.2"
fastapi = "^0.89.1"
pydantic = {extras = ["email"], version = "^1.10.4"}
uvicorn = {extras = ["standard"], version = "^0.20.0"}
asyncpg = "^0.27.0"
uuid = "^1.30"
dependency-injector = "^4.41.0"
sqlalchemy-utils = "^0.39.0"
result = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.10"
flake8 = "^6.0.0"
import-linter = "^1.6.0"
vulture = "^2.7"
isort = "^5.11.4"
pytest = "^7.2.1"
factory-boy = "^3.2.1"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]